@@ -81,3 +81,19 @@ who.command=${targetuser,-11} -> ${command}
 who.statusspeed=Total upload speed: ${totalupspeed,9} Total download speed: ${totaldnspeed,9}
 who.statususers=${currentusers} of ${maxusers} User(s) Currently Online
 
+ginfo.head=\
+ _____________.______________________________\\\\     _/___________\n\
+\\\\      _     |     _      /    _       /    \\\\     \\\\      _   \\ GINFO\n\
+${sp,1}\\\\     \\\\    |     /_____/     \\\\      /    |\\\\     \\\\     \\\\   /\n\
+${sp,2}\\\\______    |______|    \\\\___________/|_____________\\\\    ____/ ${group}\n\
+.----- /______| -------------------------------------- |_____| ---------.\n\
+|  Username |     Up |      Megs |     Dn |      Megs | Ratio |    Wkly |\n\
+|-----------+--------+-----------+--------+-----------+-------+---------|
+ginfo.user=|${user,-11}|${fup,8}|${mbup,10} |${fdn,8}|${mbup,10} |  ${ratio}  |${wkly,8} |
+ginfo.tail=\
+|-----------+--------+-----------+--------+-----------+-------+---------|\n\
+|        * = siteop           + = gadmin            ! = deleted         |\n\
+|-----------+--------+-----------+--------+-----------+-------+---------|\n\
+|   Tot Megs Up:${allmbup,10}   Tot Files Up:${allfup,7}   Users in group:${numusers,2}   |\n\
+|   Tot Megs Dn:${allmbdn,10}   Tot Files Dn:${allfdn,7}       With leech:${numleech,2}   |\n\
+`-----------------------------------------------------------------------'
