@@ -62,3 +62,6 @@ shutdown=${color}15${bold}SHUTDOWN${coloroff} : ${message}
 
 ident.success=${color}15${bold}IDENT${bold}${coloroff}: You have been identified as ${bold}${user}${bold} with ident ${bold}${ident}${bold}
 ident.failed=${color}15${bold}IDENT${bold}${coloroff}: failed to identify you as ${bold}${user}${bold} with password '${pass}'
+
+invite.success=${color}15${bold}INVITE${bold}${coloroff}: ${bold}${user}${bold} invited himself as ${bold}${nick}${bold}
+invite.failed=${color}15${bold}INVITE${bold}${coloroff}: ${bold}${user}${bold} failed to invite himslef as ${bold}${nick}${bold}
